==> xuos/xiuos_part/Ubiquitous/XiZi_IIoT/board/at32f437vmt7/third_party_driver/uart/connect_usart.c <==
#include <board.h>
#include <connect_usart.h>
#include <dev_serial.h>
#include <at32f435_437_usart.h>
#include <at32f435_437_misc.h>

static void UartIsr(struct SerialBus *serial, struct SerialDriver *serial_drv, struct SerialHardwareDevice *serial_dev)
{
    struct SerialCfgParam *serial_cfg = (struct SerialCfgParam *)serial_drv->private_data;
    struct UsartHwCfg *serial_hw_cfg = (struct UsartHwCfg *)serial_cfg->hw_cfg.private_data;

    //if(usart_flag_get(serial_hw_cfg->uart_device, USART_IDLEF_FLAG) != RESET) {
    if(usart_interrupt_flag_get(serial_hw_cfg->uart_device, USART_RDBF_FLAG) != RESET) {
        SerialSetIsr(serial_dev, SERIAL_EVENT_RX_IND);
    }
}
